[workspace]
members = ["server-example", "webhook-api", "programs/*", "order-engine-sdk"]
resolver = "2"

[workspace.package]
edition = "2021"

[profile.release]
overflow-checks = true

[workspace.dependencies]
anyhow = "1.0.95"
anchor-lang = "0.31"
anchor-spl = "0.31"
async-std = { version = "1.13", features = ["attributes", "tokio1"] }
assert_matches = "1.5.0"
axum = "0.8.1"
axum-extra = "0.10.0"
base64 = "0.22.1"
blake2 = "0.10.6"
bytes = { version = "1.10.0", features = ["serde"] }
bincode = "1.3.3"
clap = { version = "^4.5", features = ["cargo", "derive", "env"] }
diesel_migrations = "2.2.0"
futures = "0.3.31"
reqwest = { version = "0.12", features = [
  "native-tls-vendored",
  "json",
  "blocking",
] }
solana-client = "~2.3"
solana-program = "~2.3"
solana-program-test = "~2.3"
solana-rpc-client = "~2.3"
solana-sdk = "~2.3"
spl-token-client = { version = "0.16.0", default-features = false }
spl-token-2022 = { version = "9.0.0" }

serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
strum = { version = "0.26.3", features = ["derive"] }
test-case = "3.3.1"
tokio = "1.43.0"
tower = { version = "0.5.2" }
tower-http = { version = "0.6.2" }
tower-cookies = "0.11.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.13.1", features = ["v4"] }
mockito = "1.6.1"
url = "2.5.4"
itertools = "0.14.0"
num_cpus = "1.16"
thiserror = "2.0.11"
utoipa = { version = "5.3.1" }
utoipa-swagger-ui = "9.0.0"                                                    # Optional for Swagger UI
utoipa-axum = "0.2.0"                                                          # Optional for Axum
metrics = { version = "0.24.1", default-features = false }
metrics-exporter-prometheus = { version = "0.16.2", default-features = false }
dotenvy = "0.15.7"
utoipauto = "0.2.0"
