[package]
name = "webhook-api"
version = "0.1.0"
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
solana-sdk = { workspace = true }
strum = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
utoipa = { workspace = true, features = ["debug"] }
