[package]
name = "order-engine"
version = "0.1.0"
description = ""
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
name = "order_engine"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
anchor-debug = []
custom-panic = []
production = []

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
spl-token-2022 = { workspace = true, features = ["no-entrypoint"] }

[dev-dependencies]
solana-sdk = { workspace = true }
solana-program-test = { workspace = true }
agave-feature-set = "~2"
bincode = { workspace = true }
spl-token-client = { workspace = true, default-features = false }
assert_matches = { workspace = true }
itertools = { workspace = true }
test-case = { workspace = true }
